menu: Add 'SATNOGS_ANTENNA' option to 'Basic' menu and make it mandatory
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/satnogsconfig/menu.yml
+++ b/satnogsconfig/menu.yml
@@ -58,6 +58,13 @@ items:
         mandatory: true
         tags:
           - 'satnogs_client_config'
+      SATNOGS_ANTENNA:
+        type: 'variablebox'
+        short_description: 'Define SatNOGS Radio Antenna'
+        variable: 'satnogs_antenna'
+        mandatory: true
+        tags:
+          - 'satnogs_client_config'
       SATNOGS_RX_SAMP_RATE:
         type: 'variablebox'
         short_description: 'Define RX sampling rate'
