gitlab-ci: Enable security scanning
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ stages:
   - static
   - build
   - deploy
+  - security
 
 # 'static' stage
 static:
@@ -82,3 +83,27 @@ pages:
       - public
   only:
     - tags
+
+# 'security' stage
+include:
+  - template: Security/Dependency-Scanning.gitlab-ci.yml
+  - template: Security/SAST.gitlab-ci.yml
+  - template: Security/Secret-Detection.gitlab-ci.yml
+  - template: Security/License-Scanning.gitlab-ci.yml
+dependency_scanning:
+  stage: security
+  needs: []
+  variables:
+    DS_DEFAULT_ANALYZERS: 'gemnasium,gemnasium-python'
+sast:
+  stage: security
+  needs: []
+secret_detection:
+  stage: security
+  needs: []
+secret_detection_default_branch:
+  stage: security
+  needs: []
+license_scanning:
+  stage: security
+  needs: []
