--- a/setup.cfg
+++ b/setup.cfg
@@ -20,11 +20,11 @@ packages = find:
 include_package_data = True
 zip_safe = False
 install_requires =
-    pythondialog
-    PyYAML
-    setuptools
-    python-dotenv
-    psutil
+    pythondialog~=3.5.0
+    PyYAML~=5.3.0
+    setuptools~=50.3.0
+    python-dotenv~=0.14.0
+    psutil==5.5.1
 
 [options.entry_points]
 console_scripts =
