--- a/tox.ini
+++ b/tox.ini
@@ -77,3 +77,12 @@ changedir = {toxinidir}/docs
 commands =
     {envbindir}/sphinx-build -b html . "_build/html"
 sitepackages = true
+
+[testenv:deps]
+install_command = python -m pip install --no-deps {opts} {packages}
+recreate = True
+deps =
+    -rrequirements-dev.txt
+extras = dev
+commands = pip check
+sitepackages = true
