--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ install_requires =
     PyYAML~=5.3.0
     setuptools~=50.3.0
     python-dotenv~=0.14.0
-    psutil==5.5.1
+    psutil~=5.5.0
 
 [options.entry_points]
 console_scripts =
